feat(prisma): setup prisma model
added database model using prisma and generated the database

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.11.5",
     "@mui/icons-material": "^5.15.19",
     "@mui/material": "^5.15.19",
+    "@prisma/client": "^5.15.0",
     "next": "14.2.3",
     "next-auth": "^4.24.7",
     "react": "^18",
@@ -25,6 +26,7 @@
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
+    "prisma": "^5.15.0",
     "semantic-release": "^24.0.0",
     "typescript": "^5"
   }
